--- a/FinancePundit/templates/dashboard.html
+++ b/FinancePundit/templates/dashboard.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Finance Pundit</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/styles.min.css' %}">
+    <script src="{% static "js/vendor.min.js" %}"></script>
+    <script src="{% static "js/custom.min.js" %}"></script>
 </head>
 <body>
-    Welcome !!
+<div id="dashboard"></div>
+<script src="{% static "js/main.js" %}"></script>
 </body>
 </html>
